tests/compile-fail/integration_suite__integration__ecl_features__diff_switch_in_const_fn_call.snap
---
source: tests/integration/ecl_features.rs
expression: stderr
---
error: feature not supported by format
  ┌─ <input>:7:1
  │  
7 │ ╭ const int foo(int a) {
8 │ │     return 2 * a;
9 │ │ }
  │ ╰─^ not supported by old-format ECL files

error: feature not supported by format
   ┌─ <input>:12:10
   │
12 │     I0 = foo(2:3:4:5);
   │          ^^^^^^^^^^^^ this expression not supported by format


